# Elastic

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  premake5.lua
Elastic/: Makefile
Elastic/src/: Elastic.h  elpch.h
Elastic/src/Elastic/: Application.cpp  Application.h  Assert.h  Base.h  Core.h  EntryPoint.h  Input.cpp  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Timer.h  Window.cpp  Window.h
Elastic/src/Elastic/Core/: Application.cpp  Application.h  Assert.h  Base.h  EntryPoint.h  Input.cpp  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  Timestep.h  Window.cpp  Window.h
Elastic/src/Elastic/Debug/: Instrumentor.h
Elastic/src/Elastic/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Elastic/src/Elastic/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Elastic/src/Elastic/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  EditorCamera.cpp  EditorCamera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer3D.cpp  Renderer3D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
Elastic/src/Elastic/Scene/: Mesh.h
Elastic/src/Elastic/Utils/: Utils.cpp  Utils.h
Sandbox/: CMakeLists.txt  Makefile
Sandbox/src/: ExampleLayer.cpp  ExampleLayer.h  Sandbox2D.cpp  SandboxApp.cpp
